--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_localizations:
     sdk: flutter
+  geolocator: ^6.1.13
+  google_maps_flutter: ^1.0.6
   http: ^0.12.2
   shared_preferences: ^0.5.7+3
   package_info: ^0.4.3
