--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_localizations:
     sdk: flutter
+  flutter_masked_text: ^0.8.0
   geocoding: ^1.0.5
   geolocator: ^6.1.13
   google_maps_flutter: ^1.0.6
