--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Delivery Ctpaga.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+1
+version: 1.0.2+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,9 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  auto_size_text: ^2.1.0
   cupertino_icons: ^0.1.3
-  direct_select: ^1.1.0
   flutter_localizations:
     sdk: flutter
   flutter_masked_text: ^0.8.0
