--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   auto_size_text: ^2.1.0
   cupertino_icons: ^0.1.3
+  flutter_local_notifications: ^3.0.2
   flutter_localizations:
     sdk: flutter
   flutter_masked_text: ^0.8.0
@@ -24,6 +25,7 @@ dependencies:
   package_info: ^0.4.3
   path_provider: ^1.6.22
   provider: ^4.3.2+2
+  pusher_websocket_flutter: ^0.2.0
   sqflite: ^1.1.6
   url_launcher: ^5.5.2
 
