--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Delivery Ctpaga.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.4+1
+version: 1.0.5+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^2.1.0
+  cached_network_image: ^2.2.0+1
   cupertino_icons: ^0.1.3
   flutter_local_notifications: ^3.0.2
   flutter_localizations:
