--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_masked_text: ^0.8.0
+  fluttertoast: ^7.1.8
   geocoding: ^1.0.5
   geolocator: ^6.1.13
   google_maps_flutter: ^1.0.6
