--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   fluttertoast: ^7.1.8
   geocoding: ^1.0.5
   geolocator: ^6.1.13
+  geocoder: ^0.2.1
   google_maps_flutter: ^1.0.6
   http: ^0.12.2
   shared_preferences: ^0.5.7+3
