--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Delivery Ctpaga.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.8+1
+version: 1.0.9+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,11 +14,13 @@ dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^2.2.0+1
   cupertino_icons: ^0.1.3
-  flutter_local_notifications: ^3.0.2
+  flutter_local_notifications: ^1.4.4+2
   flutter_localizations:
     sdk: flutter
   flutter_masked_text: ^0.8.0
+  flutter_ringtone_player: ^2.0.0
   fluttertoast: ^7.1.8
+  firebase_messaging: ^7.0.3
   geocoding: ^1.0.5
   geolocator: ^6.1.13
   geocoder: ^0.2.1
