--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   geocoder: ^0.2.1
   google_maps_flutter: ^1.0.6
   http: ^0.12.2
+  image_cropper: ^1.3.1
+  image_picker: ^0.6.7+12
+  searchable_dropdown: ^1.1.3
   shared_preferences: ^0.5.7+3
   package_info: ^0.4.3
   path_provider: ^1.6.22
