--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_masked_text: ^0.8.0
   flutter_ringtone_player: ^2.0.0
   fluttertoast: ^7.1.8
+  file_picker: ^2.1.7
   firebase_messaging: ^7.0.3
   geocoding: ^1.0.5
   geolocator: ^6.1.13
