code update app

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,5 +61,11 @@
 		<string>remote-notification</string>
 	</array>
 
+	<key>NSAllowsArbitraryLoads</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
