--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^2.2.0+1
   cupertino_icons: ^0.1.3
+  dio: ^3.0.9
   flutter_local_notifications: ^1.4.4+2
   flutter_localizations:
     sdk: flutter
@@ -29,10 +30,12 @@ dependencies:
   http: ^0.12.2
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+12
+  install_plugin: ^2.0.1
   searchable_dropdown: ^1.1.3
   shared_preferences: ^0.5.7+3
   package_info: ^0.4.3
   path_provider: ^1.6.22
+  permission_handler: ^5.0.0
   provider: ^4.3.2+2
   pusher_websocket_flutter: ^0.2.0
   sqflite: ^1.1.6
