--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   cupertino_icons: ^0.1.3
   dio: ^3.0.9
+  ext_storage: ^1.0.3
   flutter_local_notifications: ^1.4.4+2
   flutter_localizations:
     sdk: flutter
