--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: delivery_ctpaga
-description: Delivery Ctpaga.
+description: Ctenvia.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.16+1
+version: 1.0.17+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
