--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: delivery_ctpaga
-description: Ctenvia.
+description: CTlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.18+1
+version: 1.0.19+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -89,6 +89,6 @@ flutter:
         - asset: assets/Fonts/Montserrat-ExtraLight.ttf
 
 flutter_icons:
-  image_path: 'assets/logo/logoctpaga.png'
+  image_path: 'assets/logo/ICONO-CTLLEVA.png'
   android: true
   ios: true
