--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: CTlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.20+1
+version: 1.0.21+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.2
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+12
+  in_app_update: ^1.1.15
   install_plugin: ^2.0.1
   searchable_dropdown: ^1.1.3
   shared_preferences: ^0.5.7+3
