--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: delivery_ctpaga
-description: CTlleva.
+description: Ctlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.22+1
+version: 1.0.23+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
