fix error download

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Ctlleva"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBkQ2QZLLOnFHmrHLkm3LrZOM6obSQ2FHs"/>
