--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "ctpaga.ctlleva"
+        applicationId "ctlleva.ctlleva"
         minSdkVersion 16
         targetSdkVersion 29
         multiDexEnabled true
