--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Ctlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.28+7
+version: 1.0.29+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -18,6 +18,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.4.1
   flutter_masked_text: ^0.8.0
   flutter_ringtone_player: ^2.0.0
   fluttertoast: ^7.1.8
@@ -51,6 +52,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/logo/
     - assets/icons/
   
