--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Ctlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.29+8
+version: 1.0.30+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,41 +11,41 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  auto_size_text: ^2.1.0
-  cached_network_image: ^2.2.0+1
-  cupertino_icons: ^0.1.3
-  dio: ^3.0.9
-  flutter_local_notifications: ^1.4.4+2
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.0.0
+  cupertino_icons: ^1.0.4
+  dio: ^4.0.6
+  flutter_local_notifications: ^9.5.3+1
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.4.1
+  flutter_markdown: ^0.6.10
   flutter_masked_text: ^0.8.0
-  flutter_ringtone_player: ^2.0.0
-  fluttertoast: ^7.1.8
-  file_picker: ^2.1.7
-  firebase_messaging: ^7.0.3
-  geocoding: ^1.0.5
-  geolocator: ^6.1.13
+  flutter_ringtone_player: ^3.1.1
+  fluttertoast: ^8.0.9
+  file_picker: ^4.4.0
+  firebase_messaging: ^11.2.7
+  geocoding: ^2.0.4
+  geolocator: ^8.0.5
   geocoder: ^0.2.1
-  google_maps_flutter: ^1.0.6
-  http: ^0.12.2
+  google_maps_flutter: ^2.0.9
+  http: ^0.13.3
   image_cropper: ^1.3.1
-  image_picker: ^0.6.7+12
+  image_picker: ^0.8.4+1
   searchable_dropdown: ^1.1.3
-  shared_preferences: ^0.5.7+3
-  package_info: ^0.4.3
-  path_provider: ^1.6.22
-  permission_handler: ^5.0.0
-  provider: ^4.3.2+2
+  shared_preferences: ^2.0.7
+  package_info: ^2.0.2
+  path_provider: ^2.0.4
+  permission_handler: ^8.1.6
+  provider: ^6.0.2
   pusher_websocket_flutter: ^0.2.0
-  sqflite: ^1.1.6
-  url_launcher: ^5.5.2
-  webview_flutter: ^1.0.7
+  sqflite: ^2.0.2
+  url_launcher: ^6.0.10
+  webview_flutter: ^2.0.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.7.5
+  flutter_launcher_icons: ^0.9.2
 
 flutter:
 
