--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Ctlleva.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.30+8
+version: 1.0.31+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -26,18 +26,16 @@ dependencies:
   firebase_messaging: ^11.2.7
   geocoding: ^2.0.4
   geolocator: ^8.0.5
-  geocoder: ^0.2.1
   google_maps_flutter: ^2.0.9
   http: ^0.13.3
   image_cropper: ^1.3.1
   image_picker: ^0.8.4+1
-  searchable_dropdown: ^1.1.3
+  search_choices : ^2.0.19
   shared_preferences: ^2.0.7
   package_info: ^2.0.2
   path_provider: ^2.0.4
   permission_handler: ^8.1.6
   provider: ^6.0.2
-  pusher_websocket_flutter: ^0.2.0
   sqflite: ^2.0.2
   url_launcher: ^6.0.10
   webview_flutter: ^2.0.13
