--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.31+8
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -19,7 +19,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.6.10
-  flutter_masked_text: ^0.8.0
+  flutter_masked_text2: ^0.9.1
   flutter_ringtone_player: ^3.1.1
   fluttertoast: ^8.0.9
   file_picker: ^4.4.0
@@ -28,8 +28,8 @@ dependencies:
   geolocator: ^8.0.5
   google_maps_flutter: ^2.0.9
   http: ^0.13.3
-  image_cropper: ^1.3.1
   image_picker: ^0.8.4+1
+  image_cropper: ^2.0.2
   search_choices : ^2.0.19
   shared_preferences: ^2.0.7
   package_info: ^2.0.2
